@@ -14,6 +14,8 @@ Lib/
   comparison of old and new values should be case-insensitive
 * Minor changes to which data is sent to debug output for various
   trace levels
+* Now tag [1] is used in ldap.extop.dds.RefreshResponse in
+  compliance with RFC 2589 (fix available for OpenLDAP ITS#6873)
 
 ----------------------------------------------------------------
 Released 2.4.0 2011-06-02
